--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -27,6 +27,7 @@ dependencies:
     - field.field.user.user.field_referral_benefits
     - field.field.user.user.field_referral_date
     - field.field.user.user.field_referral_url
+    - field.field.user.user.field_refresh_token
     - field.field.user.user.field_social_auth_password
     - field.field.user.user.field_tel
     - field.field.user.user.field_twitter_url
@@ -248,6 +249,7 @@ hidden:
   field_rank: true
   field_referral_benefits: true
   field_referral_date: true
+  field_refresh_token: true
   field_social_auth_password: true
   google_analytics: true
   langcode: true
