--- a/config/sync/core.entity_form_display.taxonomy_term.donation_issues.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.donation_issues.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.donation_issues.field_image
+    - field.field.taxonomy_term.donation_issues.field_user
     - image.style.thumbnail
     - taxonomy.vocabulary.donation_issues
   module:
@@ -30,6 +31,15 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
+  field_user:
+    weight: 32
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   langcode:
     type: language_select
