--- a/config/sync/core.entity_view_display.taxonomy_term.donation_issues.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.donation_issues.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.taxonomy_term.donation_issues.field_image
+    - field.field.taxonomy_term.donation_issues.field_user
     - taxonomy.vocabulary.donation_issues
   module:
     - image
@@ -28,6 +29,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_user:
+    weight: 2
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   langcode: true
