--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -49,6 +49,7 @@ module:
   girchi_ged_transactions: 0
   girchi_leaderboard: 0
   girchi_my_party_list: 0
+  girchi_notifications: 0
   girchi_paypal: 0
   girchi_referral: 0
   girchi_users: 0
