--- a/web/modules/custom/girchi_notifications/girchi_notifications.services.yml
+++ b/web/modules/custom/girchi_notifications/girchi_notifications.services.yml
@@ -4,8 +4,8 @@ services:
     arguments: ['@entity_type.manager', '@logger.factory']
   girchi_notifications.notify_user:
     class: Drupal\girchi_notifications\NotifyUserService
-    arguments: ['@logger.factory', '@request_stack']
+    arguments: ['@logger.factory', '@request_stack', '@http_client']
   girchi_notifications.get_assigned_aim_user:
     class: Drupal\girchi_notifications\NotifyDonationService
     arguments: ['@entity_type.manager', '@logger.factory',
-                '@girchi_notifications.notify_user']
+                '@girchi_notifications.notify_user', '@girchi_notifications.get_user_info']
