Create party list change detection service.

--- a/web/modules/custom/girchi_my_party_list/girchi_my_party_list.services.yml
+++ b/web/modules/custom/girchi_my_party_list/girchi_my_party_list.services.yml
@@ -2,3 +2,7 @@ services:
   girchi_my_party_list.party_list_calculator:
     class: Drupal\girchi_my_party_list\PartyListCalculatorService
     arguments: ['@entity_type.manager',  '@request_stack', '@logger.factory', '@database']
+  girchi_my_party_list.party_list_change_detection_service:
+    class: Drupal\girchi_my_party_list\PartyListChangeDetectionService
+    arguments:
+      ['@girchi_notifications.get_user_info', '@girchi_notifications.notify_user']
