--- a/web/modules/custom/girchi_my_party_list/girchi_my_party_list.info.yml
+++ b/web/modules/custom/girchi_my_party_list/girchi_my_party_list.info.yml
@@ -3,3 +3,5 @@ type: module
 description: 'Module for my party list form'
 core: 8.x
 package: 'girchi'
+dependencies:
+  - girchi_notifications:girchi_notifications
