--- a/web/themes/custom/girchi/js/react/package.json
+++ b/web/themes/custom/girchi/js/react/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^0.19.2",
         "babel-plugin-syntax-async-functions": "^6.13.0",
+        "dayjs": "^1.8.23",
         "dotenv": "^8.2.0",
         "js-cookie": "^2.2.1",
         "jsonwebtoken": "^8.5.1",
