--- a/web/modules/custom/girchi_users/girchi_users.routing.yml
+++ b/web/modules/custom/girchi_users/girchi_users.routing.yml
@@ -41,3 +41,13 @@ girchi_users.user_controller_jwtRefreshToken:
   requirements:
     _permission: 'access content'
     _role: 'authenticated'
+
+girchi_users.custom_badges_form:
+  path: '/admin/custom-badges'
+  defaults:
+    _form: '\Drupal\girchi_users\Form\CustomBadgesForm'
+    _title: 'CustomBadgesForm'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
