--- a/config/sync/field.field.taxonomy_term.badges.field_logo.yml
+++ b/config/sync/field.field.taxonomy_term.badges.field_logo.yml
@@ -13,7 +13,7 @@ entity_type: taxonomy_term
 bundle: badges
 label: Logo
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
