--- a/config/sync/language.content_settings.taxonomy_term.badges.yml
+++ b/config/sync/language.content_settings.taxonomy_term.badges.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   config:
     - taxonomy.vocabulary.badges
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
 id: taxonomy_term.badges
 target_entity_type_id: taxonomy_term
 target_bundle: badges
