Create endpoint to get user's all referrals.

--- a/web/modules/custom/girchi_users/girchi_users.routing.yml
+++ b/web/modules/custom/girchi_users/girchi_users.routing.yml
@@ -41,3 +41,12 @@ girchi_users.user_controller_jwtRefreshToken:
   requirements:
     _permission: 'access content'
     _role: 'authenticated'
+
+girchi_users.user_page_controller_get_referrals:
+  path: '/api/user/get_referrals'
+  defaults:
+    _controller: '\Drupal\girchi_users\Controller\UsersPageController::getPoliticianSupporters'
+    _title: 'Generate jwt refresh token'
+  requirements:
+    _permission: 'access content'
+    _role: 'authenticated'
