--- a/config/sync/core.entity_form_display.taxonomy_term.badges.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.badges.default.yml
@@ -3,6 +3,7 @@ langcode: ka
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.badges.field_icon_class
     - field.field.taxonomy_term.badges.field_publicity
     - taxonomy.vocabulary.badges
 id: taxonomy_term.badges.default
@@ -10,6 +11,14 @@ targetEntityType: taxonomy_term
 bundle: badges
 mode: default
 content:
+  field_icon_class:
+    weight: 37
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_publicity:
     weight: 36
     settings:
