--- a/config/sync/core.entity_view_display.taxonomy_term.badges.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.badges.default.yml
@@ -3,6 +3,7 @@ langcode: ka
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.badges.field_icon_class
     - field.field.taxonomy_term.badges.field_publicity
     - taxonomy.vocabulary.badges
 id: taxonomy_term.badges.default
@@ -10,6 +11,14 @@ targetEntityType: taxonomy_term
 bundle: badges
 mode: default
 content:
+  field_icon_class:
+    weight: 4
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_publicity:
     weight: 3
     label: above
