--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -103,6 +103,7 @@ module:
   social_api: 0
   social_auth: 0
   social_auth_facebook: 0
+  stage_file_proxy: 0
   static_server: 0
   statistics: 0
   straw: 0
