Create bridge between drupal exposed filters and markup.

--- a/web/themes/custom/girchi/girchi.libraries.yml
+++ b/web/themes/custom/girchi/girchi.libraries.yml
@@ -10,6 +10,7 @@ global-styling:
     js/global.js: {}
     dist/js/script.js: {weight: -999}
     js/react/dist/react.bundle.js: {}
+    js/users.js: {}
   dependencies:
 
 myparty-list:
