--- a/web/modules/custom/girchi_users/drush.services.yml
+++ b/web/modules/custom/girchi_users/drush.services.yml
@@ -4,4 +4,4 @@ services:
     tags:
       - { name: drush.command }
     arguments:
-      ['@entity_type.manager', '@logger.factory', '@queue']
+      ['@entity_type.manager', '@logger.factory', '@queue', '@girchi_referral.get_user_referrals']
