--- a/config/sync/core.entity_form_display.taxonomy_term.election_politicians.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.election_politicians.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.taxonomy_term.election_politicians.field_politician
     - taxonomy.vocabulary.election_politicians
   module:
-    - path
     - text
 id: taxonomy_term.election_politicians.default
 targetEntityType: taxonomy_term
@@ -17,21 +16,21 @@ bundle: election_politicians
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
     settings:
-      size: 60
       placeholder: ''
+      rows: 5
     third_party_settings: {  }
   field_icon:
-    weight: 32
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_icon_title:
-    weight: 37
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -39,7 +38,7 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 36
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -47,7 +46,7 @@ content:
     type: string_textfield
     region: content
   field_politician:
-    weight: 35
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -55,25 +54,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  langcode: true
+  path: true
