Create new field bot_integration_field. refs #729

--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.user.user.field_approved_badges
     - field.field.user.user.field_badges
     - field.field.user.user.field_bio
+    - field.field.user.user.field_bot_integration_code
     - field.field.user.user.field_cover_photo
     - field.field.user.user.field_date_of_birth
     - field.field.user.user.field_facebook_url
@@ -94,6 +95,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_bot_integration_code:
+    weight: 29
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_cover_photo:
     weight: 16
