Add user authentication subscriber to generate chatbot integration code. #729

--- a/web/modules/custom/girchi_chatbot_integration/girchi_chatbot_integration.services.yml
+++ b/web/modules/custom/girchi_chatbot_integration/girchi_chatbot_integration.services.yml
@@ -6,3 +6,9 @@ services:
   girchi_chatbot.helpers:
     class: Drupal\girchi_chatbot_integration\Services\ChatbotIntegrationHelpers
     arguments: ['@entity_type.manager', '@current_user']
+
+  gitchi_chatbot.user_authentication_subscriber:
+    class: Drupal\girchi_chatbot_integration\EventSubscriber\ChatbotUserAuthenticationSubscriber
+    arguments: ['@current_user', '@entity_type.manager', '@girchi_chatbot.helpers']
+    tags:
+      - { name: event_subscriber }
