--- a/config/sync/views.view.users.yml
+++ b/config/sync/views.view.users.yml
@@ -905,6 +905,42 @@ display:
             field_first_name: field_first_name
             field_last_name: field_last_name
           plugin_id: combine
+        field_publicity_value:
+          id: field_publicity_value
+          table: user__field_publicity
+          field: field_publicity_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
       sorts: {  }
       title: Users
       header: {  }
@@ -1876,6 +1912,33 @@ display:
     display_options:
       display_extenders: {  }
       path: users
+      sorts:
+        field_ged_value:
+          id: field_ged_value
+          table: user__field_ged
+          field: field_ged_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: true
+          expose:
+            label: 'GeD (field_ged)'
+          plugin_id: standard
+        field_referral_count_value:
+          id: field_referral_count_value
+          table: user__field_referral_count
+          field: field_referral_count_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: true
+          expose:
+            label: 'Referral count (field_referral_count)'
+          plugin_id: standard
+      defaults:
+        sorts: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -1883,6 +1946,8 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'url.query_args:sort_by'
+        - 'url.query_args:sort_order'
         - user
         - user.permissions
       tags:
