Change front page title from metatags.

--- a/config/sync/metatag.metatag_defaults.front.yml
+++ b/config/sync/metatag.metatag_defaults.front.yml
@@ -8,7 +8,7 @@ id: front
 label: 'Front page'
 tags:
   description: 'გირჩი - ახალი ამბები. დააგროვე GeD-ები და მიიღე მონაწილეობა პარტიის მართვაში. girchi tv'
-  keywords: 'გირჩი, ახალი ამბები, პოლიტიკა, არჩევნები, ტელევიზია, სკოლა, girchi, საქართველოს ისტორია, აზრით, გირჩის, პროცესი'
-  title: 'გირჩი | Girchi - ახალი ამბები და პარტიის მართვა'
   shortlink: '[site:url]'
   canonical_url: '[site:url]'
+  keywords: 'გირჩი, ახალი ამბები, პოლიტიკა, არჩევნები, ტელევიზია, სკოლა, girchi, საქართველოს ისტორია, აზრით, გირჩის, პროცესი'
+  title: 'გირჩი 2020'
